--- a/components/main-header/nav-link.module.css
+++ b/components/main-header/nav-link.module.css
@@ -6,7 +6,8 @@
   border-radius: 0.5rem;
 }
 
-.link:hover {
+.link:hover,
+.link:active {
   background: linear-gradient(90deg, #ff8a05, #f9b331);
   background-clip: text;
   -webkit-background-clip: text;
